# triverse

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: README.md  compare_openfugu.py
docs/: index.html
docs/assets/: style.css
examples/: basic_coordination.py  compressed_coordination.py  pool.mock.yaml
tests/: __init__.py  test_compression.py  test_coordinator.py  test_router.py  test_transcript.py
triverse/: __init__.py  compression.py  coordinator.py  pool.py  roles.py  router.py  transcript.py  types.py
triverse/cli/: main.py
triverse/harness/: __init__.py  base.py
