[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triverse"
version = "0.1.0"
description = "Lightweight multi-LLM coordinator inspired by Trinity — Thinker, Worker, Verifier roles with swappable harnesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "triverse contributors" }]
keywords = [
    "llm",
    "multi-agent",
    "coordination",
    "trinity",
    "harness",
    "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = ["triverse[openai,anthropic]"]
dev = ["pytest>=7.0.0", "triverse[all]"]

[project.scripts]
triverse = "triverse.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["triverse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
